Completed the project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
 
+    <!-- Favicon Icon  -->
+    
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    
+    <!-- Favicon icon ends -->
 
     <!-- Custom JS -->
 
@@ -109,7 +114,8 @@
     <!-- Disclaimer Section -->
     <section id="Disclaimer">
         <div class="Disclaimer-div">
-            Disclaimer : It's not possible to get a hundred percent probability, therefore there's no Guarantee of any kind that the
+            Disclaimer : It's not possible to get a hundred percent probability, therefore there's no Guarantee of any
+            kind that the
             relatioship will work out between the two people. No record is being kept of any information entered by the
             user of this program. The creators of the program are in no way Liable of any actions which might be taken
             by the users of this program. Please note that this site has no serious intention whatsoever.
